@@ -92,6 +92,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #20578: Add io.BufferedIOBase.readinto1.
+
 - Issue #21515: tempfile.TemporaryFile now uses os.O_TMPFILE flag is available.
 
 - Issue #13223: Fix pydoc.writedoc so that the HTML documentation for methods
